# ZEUBI

./: 42sh  Makefile  Makefile.am  Makefile.in  config.h  config.h.in~  config.status  configure  configure.ac  test.sh
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/42sh.1/: 42sh
src/: 42sh.c  42sh.h
src/.deps/: 42sh.Po  ast.Po  ast_print.Po  echo.Po  execute.Po  grammaire.Po  lexer.Po  parser.Po  string_f.Po  tests.Po  variables.Po
src/builtins/: cd.c  cd.h  echo.c  echo.h  test_cd.c
src/builtins/.deps/: echo.Po
src/execution/: execute.c  execute.h
src/execution/.deps/: execute.Po
src/lexer/: lexer.c  lexer.h
src/lexer/.deps/: lexer.Po
src/parser/: grammaire.c  grammaire.h  parser.c  parser.h
src/parser/.deps/: grammaire.Po  parser.Po
src/tools/: ast.c  ast.h  ast_print.c  ast_print.h  string_f.c  string_f.h  tests.c  tests.h  variables.c  variables.h
src/tools/.deps/: ast.Po  ast_print.Po  string_f.Po  tests.Po  variables.Po
tests/: output42s  outputbas  test1.sh  test11.sh  test13.sh  test14.sh  test15.sh  test16.sh  test17.sh  test18.sh  test19.sh  test2.sh  test20.sh  test21.sh  test22.sh  test23.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test8.sh  test9.sh  test_if.sh
testsuite_python/: tests.yml  testsuite.py
